Clean up test code in junit-jupiter-params